# Skeletal_Animation

./: CMakeLists.txt  OpenGL HW3.md  README.md
build-xcode/: CMakeCache.txt  cmake_install.cmake  debug.txt
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Skeletal_Animation.build/Debug/ALL_BUILD.build/: Script-1872C82F6093A16FE0E29D4A.sh
build-xcode/Skeletal_Animation.build/Debug/ZERO_CHECK.build/: Script-1958C85548F1DC58B37BB03A.sh
build-xcode/Skeletal_Animation.xcodeproj/: project.pbxproj
build-xcode/Skeletal_Animation.xcodeproj/project.xcworkspace/xcuserdata/popo.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/Skeletal_Animation.xcodeproj/xcuserdata/popo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build-xcode/Skeletal_Animation.xcodeproj/xcuserdata/popo.xcuserdatad/xcschemes/: xcschememanagement.plist
build-xcode/src/: cmake_install.cmake
build-xcode/src/Skeletal_Animation.build/Debug/Skeletal_Animation.build/Objects-normal/x86_64/: Skeletal_Animation.LinkFileList  main.d  main.dia
cmake/: CompilerOptions.cmake
models/: model.dae
resources/: dog.dae  model.dae  model_running.dae
skeletal_animation.xcodeproj/: project.pbxproj
skeletal_animation.xcodeproj/project.xcworkspace/xcuserdata/popo.xcuserdatad/: UserInterfaceState.xcuserstate
skeletal_animation.xcodeproj/xcshareddata/xcschemes/: skeletal_animation.xcscheme
skeletal_animation.xcodeproj/xcuserdata/popo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
skeletal_animation.xcodeproj/xcuserdata/popo.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  anim_model.fs  anim_model.vs  animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  glad.c  main.cpp  mesh.h  model_animation.h  shader.h  shader_m.h
src/Utils/StringFormat/: StringFormat-inl.hpp
